[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.5.15"
hyper = { version = "0.14.20", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.11.11"
tower = { version = "0.4.13", features = ["util"] }
